--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
   <link rel="stylesheet" href="flexbox-center-container.css" media="all">
   <link rel="stylesheet" href="system-fonts.css" media="all">
   <link rel="stylesheet" href="style.css" media="all">
-  link
 </head>
 
 <body>
+  <div class="pra">
+    <p>Click the Gift box</p>
+  </div>
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
