--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" href="flexbox-center-container.css" media="all">
   <link rel="stylesheet" href="system-fonts.css" media="all">
   <link rel="stylesheet" href="style.css" media="all">
+  <link rel="shortcut icon" href="/priya.jpeg" type="image/x-icon">
 </head>
 
 <body>
